<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sharesales</string>
    <string name="app_view">View</string>
    <string name="app_settings">Settings</string>
    
    <string-array name="drawer_nav_items">
        <item>Sales List</item>
    </string-array>
    
    <string name="action_open_drawer">action_open_drawer</string>
    <string name="action_close_drawer">action_close_drawer</string>
    
    <string name="tag_is_tmp">tag_is_tmp</string>
    <string name="tag_file_path">tag_file_path</string>
    <string name="tag_tag_bean">tag_tag_bean</string>
    <string name="tag_category_picked">tag_category_picked</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_add_new">Add New</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_follow">Follow</string>
    
    <string name="m_take_a_picture">Take a Picture</string>
    <string name="m_add_from_gallery">Add from Gallery</string>
    
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
	<string name="fish_paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="fish_title">Lorem ipsum dolor sit amet consectetuer adipiscing </string>
    
    <string name="percent">%</string>
    <string name="descr">Start date: 03/22/2014\nEnd date: 04/12/2014\nLocation: Gomel, Sviaznoy at Karpovicha</string>
    
    <string-array name="currs">
        <item>BYR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>RUB</item>
        <item>UAH</item>
    </string-array>
    
    <string name="tapToCategory">Tap here to pick a category</string>
    
</resources>