<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_add_new"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add_new"/>
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"/>
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>