<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_follow"
        android:icon="@drawable/ic_action_not_important_dark"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_follow"/>
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit"/>
    
     <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:title="@string/action_remove"/>

</menu>